...
    });
    handler.next(options);
  }

  @override
  void onResponse(
    Response<dynamic> response,
    ResponseInterceptorHandler handler,
  ) {
    _guard(() {
      final id = _ids[response.requestOptions];
      if (id == null) return;
      sink.report(
...
